created new interface and repository to resume querys used in many services